--- a/index.html.twig
+++ b/index.html.twig
@@ -102,6 +102,53 @@
 
 	</div>
 
+
+	<div class="row padding-bottom">
+		<div class="col-lg-10 offset-md-1 col-md-12">
+			<h5>Nombre quotidien de décès</h5>
+			<p>Les Etats-Unis ont atteint le triste record de 2087 décès en 24 heures le 11 avril. Ce graphique aplanit les fluctuations avec une moyenne mobile sur trois jours. La Corée du Sud n’a pas dépassé 9 décès en un jour.</p>
+			<div class="multiline" id="chartMovingAvg"></div>
+			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
+		</div>
+	</div>
+
+	<!-- <div class="row padding-bottom">
+		<div class="col-lg-10 offset-md-1 col-md-12">
+			<h5>Taux de décès quotidien</h5>
+			<p></p>
+			<div class="multiline" id="chartMovingAvgPop"></div>
+			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
+		</div>
+	</div> -->
+
+	<div class="row padding-bottom">
+		<div class="col-lg-10 offset-md-1 col-md-12">
+			<h5>Cas confirmés en valeurs absolues</h5>
+			<p>Le nombre de cas confirmés en laboratoire grimpe en flèche aux Etats-Unis, qui sont cependant encore loin derrière l’Italie et l’Espagne en taux de cas par rapport à la population.</p>
+			<div class="multiline" id="chartAbsolute"></div>
+			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
+		</div>
+	</div>
+
+	<div class="row padding-bottom">
+		<div class="col-lg-10 offset-md-1 col-md-12">
+			<h5>Taux de cas confirmés par million d’habitants</h5>
+			<p>Les pays sont alignés sur le jour où les cas confirmés atteignent le taux de 1 cas par million d’habitants. Pour la Suisse, ce «jour 0» est le 29 février, avec 12 cas. Des différences dans les méthodes et le nombre de tests effectués rendent cependant les comparaisons entre pays difficiles.</p>
+			<div class="multiline" id="chartDayOffset"></div>
+			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
+		</div>
+	</div>
+
+	<div class="row padding-bottom">
+		<div class="col-lg-10 offset-md-1 col-md-12">
+			<h5>Taux de décès par million d’habitants</h5>
+			<p>Comme dans le graphique précédent, les pays sont alignés sur le jour où les cas confirmés atteignent le taux de 1 cas par million d’habitants. L’attribution ou non d’un décès au Covid-19 peut être difficile, en particulier lorsque la victime était affectée par plusieurs maladies. Les critères ne sont pas les mêmes dans chaque pays.</p>
+			<div class="multiline" id="chartDeath"></div>
+			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
+		</div>
+	</div>
+
+
 		<!-- switzerland -->
 	<div class="row align-items-end">
 		<div class="col-12 group-label">
@@ -148,9 +195,9 @@
 	<div class="row padding-bottom">
 		<div class="col-lg-10 offset-md-1 col-md-12">
 			<h5>Les cinq cantons suisses comptant le plus de cas par habitant</h5>
-			<p>Le Tessin, Genève et Vaud sont les cantons qui comptent le plus de cas confirmés pour 100 000 habitants.</p>
+			<p>Genève, le Tessin et Vaud sont les cantons qui comptent le plus de cas confirmés pour 100 000 habitants. Chaque canton a ses propres procédures et horaires de publication des données, ce qui rend la comparaison difficile.</p>
 				<div class="multiline" id="chartCantons"></div>
-			<div class="source"><b>Source:</b> <a target="_blank" href="https://www.corona-data.ch">corona-data.ch</a>, cantons suisses. Population dans les cantons: <a target="_blank" href="https://www.bfs.admin.ch/bfs/fr/home/statistiques/population/effectif-evolution/population.assetdetail.9486047.html">chiffres définitifs 2018 de l’OFS</a></div>
+			<div class="source"><b>Source:</b> <a target="_blank" href="https://www.corona-data.ch">corona-data.ch</a>, cantons suisses. Population dans les cantons: <a target="_blank" href="https://www.bfs.admin.ch/bfs/fr/home/statistiques/population/effectif-evolution/population.assetdetail.9486047.html">chiffres définitifs 2018 de l’OFS</a>. Les données pour Genève (qui publie des chiffres prévisionnels) ont été revues à la hausse le jeudi 8 avril par notre source de données.</div>
 		</div>
 	</div>
 
@@ -195,32 +242,7 @@
 			</div>
 		</div>
 
-	<div class="row padding-bottom">
-		<div class="col-lg-10 offset-md-1 col-md-12">
-			<h5>Cas confirmés en valeurs absolues</h5>
-			<p>Le nombre de cas confirmés en laboratoire grimpe en flèche aux Etats-Unis, qui sont cependant encore loin derrière l’Italie et l’Espagne en taux de cas par rapport à la population.</p>
-			<div class="multiline" id="chartAbsolute"></div>
-			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
-		</div>
-	</div>
 
-	<div class="row padding-bottom">
-		<div class="col-lg-10 offset-md-1 col-md-12">
-			<h5>Taux de cas confirmés par million d’habitants</h5>
-			<p>Les pays sont alignés sur le jour où les cas confirmés atteignent le taux de 1 cas par million d’habitants. Pour la Suisse, ce «jour 0» est le 29 février, avec 12 cas. Des différences dans les méthodes et le nombre de tests effectués rendent cependant les comparaisons entre pays difficiles. La Confédération a renoncé au dépistage systématique le 14 mars (jour 14).</p>
-			<div class="multiline" id="chartDayOffset"></div>
-			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
-		</div>
-	</div>
-
-	<div class="row padding-bottom">
-		<div class="col-lg-10 offset-md-1 col-md-12">
-			<h5>Taux de décès par million d’habitants</h5>
-			<p>Comme dans le graphique précédent, les pays sont alignés sur le jour où les cas confirmés atteignent le taux de 1 cas par million d’habitants. L’attribution ou non d’un décès au Covid-19 peut être problématique, en particulier lorsque la victime était affectée par plusieurs maladies. Les critères ne sont pas les mêmes dans chaque pays.</p>
-			<div class="multiline" id="chartDeath"></div>
-			<div class="source"><b>Source:</b> <a href="https://www.ecdc.europa.eu/en/publications-data/download-todays-data-geographic-distribution-covid-19-cases-worldwide" target="_blank">Centre européen de prévention et de contrôle des maladies (ECDC)</a>, données retraitées par <i>Le Temps</i>.</div>
-		</div>
-	</div>
 
 
 	<!-- <div class="row padding-bottom">
@@ -452,6 +474,7 @@
 
 <!-- 14 merged, minified libraries -->
 <script src="lib-merged/libraries.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
 
 <script>
 var controller = new ScrollMagic.Controller();
@@ -475,9 +498,29 @@ var timeLocale = {
 }
 d3.timeFormatDefaultLocale(timeLocale);
 
-var chartCantons = new multilineChart({'selector': '#chartCantons', 'file': 'data/c3-cantons-switzerland.csv?0', 'timeScale': true});
 
-var chartAbsolute = new multilineChart({'selector': '#chartAbsolute', 'file': 'data/cases_timestamp.csv?0', 'timeScale': true, 'xTickFormat': ".2s"});
+var chartMovingAvg = new multilineChart({'selector': '#chartMovingAvg', 'file': 'data/cases_timestamp_deaths.csv?UPDATE', 'timeScale': true, 'xTickFormat': "d"});
+
+new ScrollMagic.Scene({triggerElement: "#chartMovingAvg", duration: 300})
+	.addTo(controller)
+	.on("enter", function(){
+		chartMovingAvg.addFatLine();
+		chartMovingAvg.annotate("2087 décès en 24 heures (aplani par la moyenne mobile)", {x: new Date('2020-04-11'), y: 1960}, -160, 10, 'curve');
+});
+
+/*
+var chartMovingAvgPop = new multilineChart({'selector': '#chartMovingAvgPop', 'file': 'data/cases_timestamp_3d.csv?UPDATE', 'timeScale': true, 'xTickFormat': "d"});
+
+new ScrollMagic.Scene({triggerElement: "#chartMovingAvgPop", duration: 300})
+	.addTo(controller)
+	.on("enter", function(){
+		chartMovingAvgPop.addFatLine();
+		// chartMovingAvg.annotate("2000 décès en 24 heures", {x: new Date('2020-04-11'), y: 6}, -50, -50);
+});*/
+
+var chartCantons = new multilineChart({'selector': '#chartCantons', 'file': 'data/c3-cantons-switzerland.csv?UPDATE', 'timeScale': true});
+
+var chartAbsolute = new multilineChart({'selector': '#chartAbsolute', 'file': 'data/cases_timestamp.csv?UPDATE', 'timeScale': true, 'xTickFormat': ".2s"});
 
 new ScrollMagic.Scene({triggerElement: "#chartAbsolute", duration: 300})
 	.addTo(controller)
@@ -485,20 +528,27 @@ new ScrollMagic.Scene({triggerElement: "#chartAbsolute", duration: 300})
 		chartAbsolute.addFatLine();
 });
 
-var chartDayOffset = new multilineChart({'selector': '#chartDayOffset', 'file': 'data/cases_per_pop_day0.csv?0'});
+
+
+
+
+var chartDayOffset = new multilineChart({'selector': '#chartDayOffset', 'file': 'data/cases_per_pop_day0.csv?UPDATE'});
 
 new ScrollMagic.Scene({triggerElement: "#chartDayOffset", duration: 300})
 	.addTo(controller)
 	.on("enter", function(){
 		chartDayOffset.addFatLine();
+		chartDayOffset.annotate("Fin du dépistage systématique en Suisse", {x: 14, y: 185}, -5);
 });
 
-var chartDeath = new multilineChart({'selector': '#chartDeath', 'file': 'data/deaths_per_pop_day0.csv?0'});
+var chartDeath = new multilineChart({'selector': '#chartDeath', 'file': 'data/deaths_per_pop_day0.csv?UPDATE'});
 
 new ScrollMagic.Scene({triggerElement: "#chartDeath", duration: 300})
 	.addTo(controller)
 	.on("enter", function(){
 		chartDeath.addFatLine();
+		chartDeath.annotate("L’Espagne enregistre plus de 500 décès en 24 heures", {x: 23, y: 52}, -25);
+
 });
 
 
