--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,9 @@ h1{
 
 @media only screen and (max-width: 700px){
 	/* ... */
+	.map text{
+		font-size: 18px;
+	}
 }
 
 /* CHARTS */
@@ -533,11 +536,31 @@ select:focus, textarea:focus, input:focus {
 	border-radius: 4px;
 	position: absolute;
 	background-color: white;
-	font-size: 14px;
+	font-size: .8em;
 	pointer-events: none;
 	-webkit-transition: all 0.25s;
 	-moz-transition: all 0.25s;
 	-ms-transition: all 0.25s;
 	-o-transition: all 0.25s;
 	transition: all 0.25s;
+}
+
+.map .cantons path{
+	transition: all 0.1s;
+}
+
+.map .annotation{
+	transition: all 0.25s;
+}
+/*.map text.annotation-note-label {
+	font-size: 20px;
+}*/
+.map .annotation-note-bg{
+	fill: #FFE8F3;
+	fill-opacity: 0.9;
+}
+
+.map .annotation path{
+	stroke: #FF0D83;
+	stroke-width: 2px;
 }
